--- a/autoencoder/autoenc-cpp/CMakeLists.txt
+++ b/autoencoder/autoenc-cpp/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.18 FATAL_ERROR)
-project(example-app)
+project(autoenctest)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -10,19 +10,24 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
 file(DOWNLOAD https://raw.githubusercontent.com/lvandeve/lodepng/refs/heads/master/lodepng.cpp ${CMAKE_SOURCE_DIR}/thirdparty/lodepng.cpp)
 file(DOWNLOAD https://raw.githubusercontent.com/lvandeve/lodepng/refs/heads/master/lodepng.h ${CMAKE_SOURCE_DIR}/thirdparty/lodepng.h)
 
-add_executable(example-app example-app.cpp ${CMAKE_SOURCE_DIR}/thirdparty/lodepng.cpp)
+add_executable(autoenctest autoenctest.cpp ${CMAKE_SOURCE_DIR}/thirdparty/lodepng.cpp)
+add_executable(autoenctest-tuned autoenctest-tuned.cpp ${CMAKE_SOURCE_DIR}/thirdparty/lodepng.cpp)
 
-target_link_libraries(example-app "${TORCH_LIBRARIES}")
-set_property(TARGET example-app PROPERTY CXX_STANDARD 17)
+target_link_libraries(autoenctest-tuned "${TORCH_LIBRARIES}")
+target_link_libraries(autoenctest "${TORCH_LIBRARIES}")
+
+set_property(TARGET autoenctest PROPERTY CXX_STANDARD 17)
+set_property(TARGET autoenctest-tuned PROPERTY CXX_STANDARD 17)
+
 
 # The following code block is suggested to be used on Windows.
 # According to https://github.com/pytorch/pytorch/issues/25457,
 # the DLLs need to be copied to avoid memory errors.
 if (MSVC)
   file(GLOB TORCH_DLLS "${TORCH_INSTALL_PREFIX}/lib/*.dll")
-  add_custom_command(TARGET example-app
+  add_custom_command(TARGET autoenctest
                      POST_BUILD
                      COMMAND ${CMAKE_COMMAND} -E copy_if_different
                      ${TORCH_DLLS}
-                     $<TARGET_FILE_DIR:example-app>)
+                     $<TARGET_FILE_DIR:autoenctest>)
 endif (MSVC)
